MMCPA-1337: MMCPA-1492: Adjusting throbber position on mobile, too close to remove link was not looking good. Also fixing arabic only margin for tooltip area in cart, matches more closely to zeplin now for arabic.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/cart/_basket.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/cart/_basket.scss
@@ -589,3 +589,12 @@
     float: $left;
   }
 }
+
+html[lang=ar] {
+  .customer-cart-form .tooltip--wrap {
+    @include breakpoint($tablet) {
+      margin-top: 0.3125rem;
+      margin-bottom: 1.625rem;
+    }
+  }
+}
